@@ -38,6 +38,7 @@
          "requires" : {
             "Config::ZOMG" : "0",
             "File::Temp" : "0",
+            "File::Which" : "0",
             "FindBin" : "0",
             "Hash::Merge" : "0",
             "Net::EmptyPort" : "0",
@@ -64,7 +65,7 @@
          "web" : "https://github.com/jshy/Test-mongod"
       }
    },
-   "version" : "0.03",
+   "version" : "0.04",
    "x_contributors" : [
       "Alexandr Ciornii <alexchorny@gmail.com>",
       "Jesse Shy <jesse@classmith.com>",
